# ornament-for-the-rest-of-us

./: .gitignore  README.md  pyproject.toml
bookpipeline/: __init__.py  cli.py  config.py  epub_builder.py  error_detector.py  ocr.py  page_joiner.py  pipeline.py  preprocessor.py  progress.py  text_cleaner.py
notes/: orientation_detection_research.md
review-app/: index.html  package.json  pnpm-lock.yaml  run.sh  vite.config.ts
review-app/server/: server.py
review-app/src/: App.css  App.tsx  index.css  types.ts
tests/: test_orientation_accuracy.py  test_orientation_detection.py  test_page_joiner.py  test_progress.py  test_resize_accuracy.py  test_text_cleaner.py
